# FirstPoetryProject

FirstPoetryProject/: README.md  pyproject.toml
FirstPoetryProject/firstpoetryproject/: main.py
FirstPoetryProject/tests/: test_Project.py
