[tool.poetry]
name = "firstpoetryproject"
version = "0.1.0"
description = ""
authors = ["AIKhan099 <78854179+AIKhan099@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pytest = "^8.2.0"
fastapi = "^0.111.0"
unicorn = {extras = ["standard"], version = "^2.0.1.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
